--- a/项目总结.md
+++ b/项目总结.md
@@ -145,3 +145,8 @@
 
 * 改进后比原方式不多的地方
   - 暂时没发现不足的地方
+
+
+### 采用Jenkins 进行CI/CD 管理
+ * 第一次使用这个Jenkins tool, 中间过程中有点坑, 想要的功能好在还支持, 这个与gitlab ci、k8s 等的devops思想非常一致。
+   具体的总结在： [https://www.notion.so/Jenkins-28ea54bbdef242c3a03d01ee8301aba1]
