--- a/项目总结.md
+++ b/项目总结.md
@@ -146,6 +146,7 @@
 * 改进后比原方式不多的地方
   - 暂时没发现不足的地方
 
+### 还有一个 nock（如果没用superagent, 这个应该可以解决测试的问题）
 
 ### 采用Jenkins 进行CI/CD 管理
  * 第一次使用这个Jenkins tool, 中间过程中有点坑, 想要的功能好在还支持, 这个与gitlab ci、k8s 等的devops思想非常一致。
